@@ -1,5 +1,6 @@
 0.97c
 
+* Improved Tumblr support. Attempts to identify posts/notes/photos.
 * Tweaked the default website icon logic to verify it's an image.
 * Added Lifestream::validate_image($url).
 
